# cardano-ledger-wasm

./: .gitignore  CHANGELOG.md  README.md  cabal-wasm.project  cabal.project  flake.nix  gate.sh  justfile  release-please-config.json
.github/workflows/: ci.yml  release.yml  sync-cabal-version.yml  version-check.yml
.specify/memory/: constitution.md
cardano-ledger-wasm/: cardano-ledger-wasm.cabal
cardano-ledger-wasm/app/: Main.hs
cardano-ledger-wasm/src/: CardanoLedgerWasm.hs
cardano-ledger-wasm/src/Conway/: Inspector.hs
cardano-ledger-wasm/src/Conway/Inspector/: Common.hs  Context.hs  Evaluation.hs  Validation.hs
nix/: wasm-targets.nix
nix/wasm/: default.nix  forks.json  mkCardanoLedgerWasm.nix
specs/001-bootstrap-wasm/: plan.md  spec.md  tasks.md
specs/002-lift-ledger-kernel/: plan.md  spec.md  tasks.md
