cabal-version: 3.0
name:          cardano-ledger-wasm
version:       0.1.0.0
synopsis:      WASM skeleton for Cardano ledger operations
description:   Empty-but-buildable WASM skeleton for Cardano ledger operations.
author:        lambdasistemi
maintainer:    paolino@lambdasistemi.com
category:      Cardano
license:       MIT
build-type:    Simple

library
  exposed-modules:  Conway.Inspector
                  , CardanoLedgerWasm
  other-modules:    Conway.Inspector.Common
                  , Conway.Inspector.Context
                  , Conway.Inspector.Evaluation
                  , Conway.Inspector.Validation
  hs-source-dirs:   src
  build-depends:    base                  >=4.19 && <5
                  , aeson
                  , base16-bytestring
                  , bytestring
                  , cardano-crypto-class
                  , cardano-ledger-alonzo
                  , cardano-ledger-api
                  , cardano-ledger-binary
                  , cardano-ledger-conway
                  , cardano-ledger-core
                  , cardano-ledger-mary
                  , cardano-ledger-shelley
                  , cardano-slotting
                  , cborg
                  , containers
                  , data-default
                  , microlens
                  , plutus-ledger-api
                  , text
                  , time
  default-language: Haskell2010
  ghc-options:      -Wall

executable cardano-ledger-wasm
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base               >=4.19 && <5
                  , cardano-ledger-wasm
  default-language: Haskell2010
  ghc-options:      -Wall
